Fix text alignment in button component

--- a/src/components/button/styles.module.scss
+++ b/src/components/button/styles.module.scss
@@ -1,6 +1,7 @@
 .button {
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 0 2em 0 2em;
   border-radius: 10px;
   transtion: 3s;
